--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>kyaruwo</title>
 
     <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+    />
 
     <script src="js/index.js"></script>
   </head>
