--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
 
   <header>
     <h id="nav-icon">kyaruwo</h>
+
     <button id="theme-btn" onclick="change_theme()">
       <img id="theme-btn-img" src="assets/theme-light.png" />
     </button>
+
+    <div id="nav-links">
+      <a href="#root">Home</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
   </header>
 
   <body>
