--- a/index.html
+++ b/index.html
@@ -16,17 +16,49 @@
     <script src="js/index.js"></script>
   </head>
 
-  <header>
-    <span id="wordmark">kyaruwo</span>
+  <body>
+    <header>
+      <span id="wordmark">kyaruwo</span>
 
-    <div id="nav">
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+      <div id="nav">
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </header>
+
+    <div id="summary">
+      <img id="portrait" src="assets/tako.gif" alt="takoyaruwo" />
+      <div id="detail">
+        <span id="greeting">Hi, I'm</span>
+        <span id="username">kyaruwo</span>
+        <span id="role">Developer</span>
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://github.com/kyaruwo"
+        >
+          <img
+            title="kyaruwo"
+            src="https://skillicons.dev/icons?i=github&theme=dark"
+            alt="github/kyaruwo"
+          />
+        </a>
+      </div>
     </div>
-  </header>
 
-  <body></body>
+    <div id="content">
+      <div id="about">
+        <span>About Me</span>
+      </div>
+      <div id="projects">
+        <span>Projects</span>
+      </div>
+      <div id="contact">
+        <span>Contact Me</span>
+      </div>
+    </div>
 
-  <footer></footer>
+    <footer></footer>
+  </body>
 </html>
