--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap"
     />
 
     <script src="js/index.js"></script>
@@ -28,7 +28,12 @@
     </header>
 
     <div id="summary">
-      <img id="portrait" src="assets/tako.gif" alt="takoyaruwo" />
+      <img
+        id="portrait"
+        src="assets/tako.gif"
+        alt="takoyaruwo"
+        draggable="false"
+      />
       <div id="detail">
         <span id="greeting">Hi, I'm</span>
         <span id="username">kyaruwo</span>
@@ -50,12 +55,30 @@
     <div id="content">
       <div id="about">
         <span>About Me</span>
+        <div id="about_data">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          assumenda maxime fugit, facere eveniet ipsa quasi optio suscipit quam
+          alias repellat rem qui? Eos inventore quaerat, quo atque veritatis
+          numquam.
+        </div>
       </div>
       <div id="projects">
         <span>Projects</span>
+        <div id="projects_data">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          assumenda maxime fugit, facere eveniet ipsa quasi optio suscipit quam
+          alias repellat rem qui? Eos inventore quaerat, quo atque veritatis
+          numquam.
+        </div>
       </div>
       <div id="contact">
         <span>Contact Me</span>
+        <div id="contact_data">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          assumenda maxime fugit, facere eveniet ipsa quasi optio suscipit quam
+          alias repellat rem qui? Eos inventore quaerat, quo atque veritatis
+          numquam.
+        </div>
       </div>
     </div>
 
