--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&display=swap"
     />
 
     <script src="js/index.js"></script>
@@ -53,16 +53,73 @@
     </div>
 
     <div id="content">
-      <div id="about">
+      <div id="about" class="content_block">
         <span>About Me</span>
         <div id="about_data">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          assumenda maxime fugit, facere eveniet ipsa quasi optio suscipit quam
-          alias repellat rem qui? Eos inventore quaerat, quo atque veritatis
-          numquam.
+          <div id="quote">
+            <span>life is not daijoubu</span>
+          </div>
+          <div id="skills">
+            <div>
+              <img src="https://skillicons.dev/icons?i=python&theme=dark" />
+              <div>
+                <h class="skill">Python</h>
+                <p class="level">Competent</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=sqlite&theme=dark" />
+              <div>
+                <h class="skill">SQLite</h>
+                <p class="level">Competent</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=godot&theme=dark" />
+              <div>
+                <h class="skill">Godot</h>
+                <p class="level">Novice</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=nodejs&theme=dark" />
+              <div>
+                <h class="skill">NodeJS</h>
+                <p class="level">Novice</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=html&theme=dark" />
+              <div>
+                <h class="skill">HTML</h>
+                <p class="level">Novice</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=css&theme=dark" />
+              <div>
+                <h class="skill">CSS</h>
+                <p class="level">Novice</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=js&theme=dark" />
+              <div>
+                <h class="skill">JavaScript</h>
+                <p class="level">Novice</p>
+              </div>
+            </div>
+            <div>
+              <img src="https://skillicons.dev/icons?i=php&theme=dark" />
+              <div>
+                <h class="skill">PHP</h>
+                <p class="level">Novice</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div id="projects">
+      <div id="projects" class="content_block">
         <span>Projects</span>
         <div id="projects_data">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
@@ -71,7 +128,7 @@
           numquam.
         </div>
       </div>
-      <div id="contact">
+      <div id="contact" class="content_block">
         <span>Contact Me</span>
         <div id="contact_data">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
