--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&display=swap"
     />
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js" defer></script>
   </head>
 
   <body>
@@ -59,64 +59,7 @@
           <div id="quote">
             <span>life is not daijoubu</span>
           </div>
-          <div id="skills">
-            <div>
-              <img src="https://skillicons.dev/icons?i=python&theme=dark" />
-              <div>
-                <h class="skill">Python</h>
-                <p class="level">Competent</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=sqlite&theme=dark" />
-              <div>
-                <h class="skill">SQLite</h>
-                <p class="level">Competent</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=godot&theme=dark" />
-              <div>
-                <h class="skill">Godot</h>
-                <p class="level">Novice</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=nodejs&theme=dark" />
-              <div>
-                <h class="skill">NodeJS</h>
-                <p class="level">Novice</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=html&theme=dark" />
-              <div>
-                <h class="skill">HTML</h>
-                <p class="level">Novice</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=css&theme=dark" />
-              <div>
-                <h class="skill">CSS</h>
-                <p class="level">Novice</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=js&theme=dark" />
-              <div>
-                <h class="skill">JavaScript</h>
-                <p class="level">Novice</p>
-              </div>
-            </div>
-            <div>
-              <img src="https://skillicons.dev/icons?i=php&theme=dark" />
-              <div>
-                <h class="skill">PHP</h>
-                <p class="level">Novice</p>
-              </div>
-            </div>
-          </div>
+          <div id="skills"></div>
         </div>
       </div>
       <div id="projects" class="content_block">
