--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="shortcut icon" href="assets/tako.ico" type="image/x-icon" />
     <title>kyaruwo</title>
 
-    <link rel="stylesheet" href="css/index.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&display=swap"
-    />
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&display=swap" />
+    <link rel="stylesheet" href="css/index.css" />
 
     <script src="js/index.js" defer></script>
   </head>
@@ -22,8 +21,6 @@
 
       <div id="nav">
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
       </div>
     </header>
 
@@ -32,8 +29,7 @@
         id="portrait"
         src="assets/tako.gif"
         alt="takoyaruwo"
-        draggable="false"
-      />
+        draggable="false" />
       <div id="detail">
         <span id="greeting">Hi, I'm</span>
         <span id="username">kyaruwo</span>
@@ -41,13 +37,11 @@
         <a
           target="_blank"
           rel="noopener noreferrer"
-          href="https://github.com/kyaruwo"
-        >
+          href="https://github.com/kyaruwo">
           <img
             title="kyaruwo"
             src="https://skillicons.dev/icons?i=github&theme=dark"
-            alt="github/kyaruwo"
-          />
+            alt="github/kyaruwo" />
         </a>
       </div>
     </div>
@@ -62,26 +56,6 @@
           <div id="skills"></div>
         </div>
       </div>
-      <div id="projects" class="content_block">
-        <span>Projects</span>
-        <div id="projects_data">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          assumenda maxime fugit, facere eveniet ipsa quasi optio suscipit quam
-          alias repellat rem qui? Eos inventore quaerat, quo atque veritatis
-          numquam.
-        </div>
-      </div>
-      <div id="contact" class="content_block">
-        <span>Contact Me</span>
-        <div id="contact_data">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          assumenda maxime fugit, facere eveniet ipsa quasi optio suscipit quam
-          alias repellat rem qui? Eos inventore quaerat, quo atque veritatis
-          numquam.
-        </div>
-      </div>
     </div>
-
-    <footer></footer>
   </body>
 </html>
