--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/tako.ico" type="image/x-icon" />
-    <title>kyaruwo</title>
+        <link rel="shortcut icon" href="assets/tako.ico" type="image/x-icon" />
+        <title>kyaruwo</title>
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&display=swap" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico/css/pico.min.css" />
-    <link rel="stylesheet" href="css/index.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;800&display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@picocss/pico/css/pico.min.css"
+        />
+        <link rel="stylesheet" href="css/index.css" />
 
-    <script src="js/index.js" defer></script>
-  </head>
+        <script src="js/index.js" defer></script>
+    </head>
 
-  <body class="container">
-    <!-- NAV -->
-    <nav>
-      <span onclick="home()">kyaruwo</span>
-      <div id="nav-bar">
-        <a onclick="languages()">Languages</a>
-        <a onclick="tools()">Tools</a>
-      </div>
-      <details id="nav-borgar" role="list" dir="rtl">
-        <summary aria-haspopup="listbox">Menu</summary>
-        <ul role="listbox">
-          <li onclick="languages()">Languages</li>
-          <li onclick="tools()">Tools</li>
-        </ul>
-      </details>
-    </nav>
-    <!-- ./ NAV -->
+    <body class="container">
+        <!-- NAV -->
+        <nav>
+            <span onclick="home()">kyaruwo</span>
+            <div id="nav-bar">
+                <a onclick="languages()">Languages</a>
+                <a onclick="tools()">Tools</a>
+            </div>
+            <details id="nav-borgar" role="list" dir="rtl">
+                <summary aria-haspopup="listbox">Menu</summary>
+                <ul role="listbox">
+                    <li onclick="languages()">Languages</li>
+                    <li onclick="tools()">Tools</li>
+                </ul>
+            </details>
+        </nav>
+        <!-- ./ NAV -->
 
-    <!-- MAIN -->
-    <!-- Dynamic Content -->
-    <main id="main" class="container-fluid"></main>
-    <!-- ./ Dynamic Content -->
-    <!-- ./ MAIN -->
-  </body>
+        <!-- MAIN -->
+        <!-- Dynamic Content -->
+        <main id="main" class="container-fluid"></main>
+        <!-- ./ Dynamic Content -->
+        <!-- ./ MAIN -->
+    </body>
 </html>
