--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         <nav>
             <span onclick="home()">kyaruwo</span>
             <div id="nav-bar">
+                <a onclick="home()">Home</a>
                 <a onclick="languages()">Languages</a>
                 <a onclick="tools()">Tools</a>
             </div>
             <details id="nav-borgar" role="list" dir="rtl">
                 <summary aria-haspopup="listbox">Menu</summary>
                 <ul role="listbox">
+                    <li onclick="home()">Home</li>
                     <li onclick="languages()">Languages</li>
                     <li onclick="tools()">Tools</li>
                 </ul>
