--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="flex justify-around items-end h-20 mb-24">
             <button
                 onclick="home()"
-                class="font-black text-5xl transition-all ease-in duration-2420 text-ika_purple hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-690"
+                class="font-black text-5xl transition-all ease-in duration-2420 text-inai_purple hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-690"
             >
                 kyaruwo
             </button>
