--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="shortcut icon" href="assets/tako.ico" type="image/x-icon" />
         <title>kyaruwo</title>
 
-        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="index.css" />
 
-        <script src="js/index.js" defer></script>
+        <script src="index.js" defer></script>
     </head>
 
     <body class="bg-ink_black text-ina_heart">
