--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 kyaruwo
             </button>
             <div
-                class="max-lg:hidden flex justify-between gap-20 font-semibold text-2xl"
+                class="max-lg:hidden font-semibold text-2xl flex justify-between gap-20"
             >
                 <button
                     class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
@@ -75,9 +75,7 @@
         </nav>
 
         <div id="borgar_menu" class="lg:hidden mt-8 hidden">
-            <div
-                class="flex flex-col gap-4 font-semibold bg-ink_black text-2xl"
-            >
+            <div class="font-semibold text-2xl flex flex-col gap-4">
                 <button
                     class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
                     onclick="home()"
