--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             >
                 kyaruwo
             </button>
+
             <div
                 class="max-lg:hidden font-semibold text-2xl flex justify-between gap-20"
             >
@@ -44,53 +45,58 @@
                 </button>
             </div>
 
-            <svg
-                id="borgar_open"
-                onclick="borgar()"
-                class="lg:hidden block h-10 w-10"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-            >
-                <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-                />
-            </svg>
-            <svg
-                id="borgar_close"
-                onclick="borgar()"
-                class="lg:hidden h-10 w-10 hidden"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-            >
-                <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M6 18L18 6M6 6l12 12"
-                />
-            </svg>
+            <div class="lg:hidden">
+                <svg
+                    id="borgar_open"
+                    onclick="borgar()"
+                    class="block h-10 w-10"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                >
+                    <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                    />
+                </svg>
+                <svg
+                    id="borgar_close"
+                    onclick="borgar()"
+                    class="h-10 w-10 hidden"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                >
+                    <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M6 18L18 6M6 6l12 12"
+                    />
+                </svg>
+            </div>
         </nav>
 
         <div id="borgar_menu" class="lg:hidden mt-8 hidden">
             <div class="font-semibold text-2xl flex flex-col gap-4">
                 <button
-                    class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
-                    onclick="home()"
+                    id="borgar_home"
+                    class="rounded transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
+                    onclick="home();borgar()"
                 >
                     Home
                 </button>
                 <button
-                    class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
-                    onclick="languages()"
+                    id="borgar_languages"
+                    class="rounded transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
+                    onclick="languages();borgar()"
                 >
                     Languages
                 </button>
                 <button
-                    class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
-                    onclick="tools()"
+                    id="borgar_tools"
+                    class="rounded transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
+                    onclick="tools();borgar()"
                 >
                     Tools
                 </button>
