--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 kyaruwo
             </button>
 
-            <div
-                class="max-lg:hidden font-semibold text-2xl flex justify-between gap-20"
-            >
+            <div class="max-lg:hidden font-semibold text-2xl flex gap-20">
                 <button
                     class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
                     onclick="home()"
@@ -49,7 +47,7 @@
                 <svg
                     id="borgar_open"
                     onclick="borgar()"
-                    class="block h-10 w-10"
+                    class="h-10 w-10"
                     viewBox="0 0 24 24"
                     stroke-width="2"
                     stroke="currentColor"
@@ -77,25 +75,25 @@
             </div>
         </nav>
 
-        <div id="borgar_menu" class="lg:hidden mt-8 hidden">
-            <div class="font-semibold text-2xl flex flex-col gap-4">
+        <div id="borgar_menu" class="lg:hidden mt-20 hidden">
+            <div class="font-semibold text-2xl flex flex-col gap-8">
                 <button
                     id="borgar_home"
-                    class="rounded transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
+                    class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
                     onclick="home();borgar()"
                 >
                     Home
                 </button>
                 <button
                     id="borgar_languages"
-                    class="rounded transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
+                    class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
                     onclick="languages();borgar()"
                 >
                     Languages
                 </button>
                 <button
                     id="borgar_tools"
-                    class="rounded transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
+                    class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
                     onclick="tools();borgar()"
                 >
                     Tools
@@ -106,7 +104,7 @@
 
         <!-- MAIN -->
         <!-- Dynamic Content -->
-        <main id="main" class="mt-24"></main>
+        <main id="main" class="mt-20"></main>
         <!-- ./ Dynamic Content -->
         <!-- ./ MAIN -->
     </body>
