--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
                 <svg
                     id="borgar_open"
                     onclick="borgar()"
-                    class="h-10 w-10"
+                    class="h-10 w-10 stroke-ina_heart"
                     viewBox="0 0 24 24"
                     stroke-width="2"
-                    stroke="currentColor"
                 >
                     <path
                         stroke-linecap="round"
@@ -61,10 +60,9 @@
                 <svg
                     id="borgar_close"
                     onclick="borgar()"
-                    class="h-10 w-10 hidden"
+                    class="h-10 w-10 stroke-ina_orange hidden"
                     viewBox="0 0 24 24"
                     stroke-width="2"
-                    stroke="currentColor"
                 >
                     <path
                         stroke-linecap="round"
