--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body class="bg-ink_black text-ina_heart">
         <!-- NAV -->
-
+        <!-- DESKTOP -->
         <nav class="max-lg:hidden flex justify-around items-center h-20">
             <button
                 onclick="home()"
@@ -44,7 +44,8 @@
                 </button>
             </div>
         </nav>
-
+        <!-- ./ DESKTOP -->
+        <!-- MOBILE -->
         <nav class="lg:hidden flex justify-around items-center h-20">
             <button
                 onclick="home();borgar_close()"
@@ -105,6 +106,7 @@
                 </button>
             </div>
         </div>
+        <!-- ./ MOBILE -->
         <!-- ./ NAV -->
 
         <!-- MAIN -->
