--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <body class="bg-ink_black text-ina_heart">
         <!-- NAV -->
         <!-- DESKTOP -->
-        <nav class="max-lg:hidden flex justify-around items-center h-20">
+        <nav class="flex items-center justify-around h-20 max-lg:hidden">
             <button
                 onclick="home()"
-                class="font-black text-5xl transition-all ease-in duration-2420 text-inai_purple hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-690"
+                class="text-5xl font-black transition-all ease-in duration-2420 text-inai_purple hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-690"
             >
                 kyaruwo
             </button>
 
-            <div class="max-lg:hidden font-semibold text-2xl flex gap-20">
+            <div class="flex gap-20 text-2xl font-semibold max-lg:hidden">
                 <button
                     class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
                     onclick="home()"
@@ -46,10 +46,10 @@
         </nav>
         <!-- ./ DESKTOP -->
         <!-- MOBILE -->
-        <nav class="lg:hidden flex justify-around items-center h-20">
+        <nav class="flex items-center justify-around h-20 lg:hidden">
             <button
                 onclick="home();borgar_close()"
-                class="font-black text-5xl transition-all ease-in duration-2420 text-inai_purple hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-690"
+                class="text-5xl font-black transition-all ease-in duration-2420 text-inai_purple hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-690"
             >
                 kyaruwo
             </button>
@@ -57,7 +57,7 @@
             <svg
                 id="borgar_open"
                 onclick="borgar_open()"
-                class="h-10 w-10 stroke-ina_heart"
+                class="w-10 h-10 stroke-ina_heart"
                 viewBox="0 0 24 24"
                 stroke-width="2"
             >
@@ -70,7 +70,7 @@
             <svg
                 id="borgar_close"
                 onclick="borgar_close()"
-                class="h-10 w-10 stroke-ina_orange hidden"
+                class="hidden w-10 h-10 stroke-ina_orange"
                 viewBox="0 0 24 24"
                 stroke-width="2"
             >
@@ -81,8 +81,8 @@
                 />
             </svg>
         </nav>
-        <div id="borgar_menu" class="lg:hidden mt-20 hidden">
-            <div class="font-semibold text-2xl flex flex-col gap-8">
+        <div id="borgar_menu" class="hidden mt-20 lg:hidden">
+            <div class="flex flex-col gap-8 text-2xl font-semibold">
                 <button
                     id="borgar_home"
                     class="transition-all ease-in duration-690 hover:transition-all hover:ease-out hover:text-ina_orange hover:duration-420"
