--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <!-- MAIN -->
         <!-- Dynamic Content -->
-        <main id="main" class="mt-20"></main>
+        <main id="main" class="max-lg:mt-10 lg:mx-28 lg:mt-20"></main>
         <!-- ./ Dynamic Content -->
         <!-- ./ MAIN -->
     </body>
