--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="index.js" defer></script>
     </head>
 
-    <body class="bg-ink_black text-ina_heart">
+    <body class="select-none bg-ink_black text-ina_heart">
         <!-- NAV -->
         <!-- DESKTOP -->
         <nav class="flex h-20 items-center justify-around max-lg:hidden">
