--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     onclick="projects();borgar_close()"
                     class="transition-all duration-690 ease-in hover:text-ina_orange hover:transition-all hover:duration-420 hover:ease-out"
                 >
-                    Languages
+                    Projects
                 </button>
                 <button
                     onclick="languages();borgar_close()"
