--- a/index.html
+++ b/index.html
@@ -64,26 +64,32 @@
                 id="borgar_open"
                 onclick="borgar_open()"
                 class="h-10 w-10 stroke-ina_heart"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="2"
+                stroke="currentColor"
             >
                 <path
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                    d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5"
                 />
             </svg>
             <svg
                 id="borgar_close"
                 onclick="borgar_close()"
                 class="hidden h-10 w-10 stroke-ina_orange"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="2"
+                stroke="currentColor"
             >
                 <path
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    d="M6 18L18 6M6 6l12 12"
+                    d="M6 18 18 6M6 6l12 12"
                 />
             </svg>
         </nav>
