--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <button
                     onclick="projects()"
                     class="transition-all duration-690 ease-in hover:text-ina_orange hover:transition-all hover:duration-420 hover:ease-out"
+                    hidden
                 >
                     Projects
                 </button>
@@ -104,6 +105,7 @@
                 <button
                     onclick="projects();borgar_close()"
                     class="transition-all duration-690 ease-in hover:text-ina_orange hover:transition-all hover:duration-420 hover:ease-out"
+                    hidden
                 >
                     Projects
                 </button>
